fix: CollapseBox overflow in collapsed mode

--- a/webapp/javascript/ui/Box.module.scss
+++ b/webapp/javascript/ui/Box.module.scss
@@ -26,6 +26,7 @@
       height: 0;
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
   }
 }
